--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,6 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-m3u-ipytv = "*"
 m3u8 = "*"
 pyinstaller = "*"
 selenium = "*"
@@ -16,4 +15,4 @@ python_version = "3.12"
 
 [scripts]
 main = "python3 main.py"
-build = "pipenv run pyinstaller gchls.py"
+build = "pipenv run pyinstaller gchls.py --onefile --target-arch universal2"
