--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,15 @@
 name: CI
 
 on:
+  push:
+    branches:
+      - "main"
   pull_request:
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: macos-14-xlarge
+    runs-on: macos-13
     steps:
     - name: Check Out Repo 
       uses: actions/checkout@v4
@@ -19,16 +22,16 @@ jobs:
         cache: pipenv
     - name: Install dependencies
       run: pipenv install
-    - name: set locale
+    - name: Packaging
       run: |
-        sudo locale-gen ja_JP.UTF-8
-        sudo update-locale LANG=ja_JP.UTF-8
-    - name: prepare requirements.txt
-      run: pipenv lock -r > requirements.txt
-    - name: Package Application
-      uses: sayyid5416/pyinstaller@v1
+        pipenv run build
+        chmod +x ./dist/gchls
+        cd ./dist
+        tar zcf gchls-snapshot.tar.gz ./gchls
+        mv ./gchls-snapshot.tar.gz ../
+        cd ..
+    - name: Upload to artifact
+      uses: actions/upload-artifact@v3
       with:
-        python_ver: '3.11'
-        spec: './gchls.spec'
-        requirements: './requirements.txt'
-        upload_exe_with_name: 'gchls'
+        name: gchls
+        path: gchls-snapshot.tar.gz
